feat(ClassManagement): Translate weekdays and buttons in Class Assignment modal - Translated weekday abbreviations (Sun/Mon/Tue/Wed/Thu/Fri/Sat) for all 3 languages - Translated Click to Assign and Click to Remove buttons - Translated Complete Assignment button - Added full translation support for Azerbaijani (Baz/B.e/C.a/Cer/C.a/Cum/Sen) and Russian (Vs/Pn/Vt/Sr/Cht/Pt/Sb) weekdays

--- a/frontend/public/locales/az/translation.json
+++ b/frontend/public/locales/az/translation.json
@@ -1083,7 +1083,19 @@
         "helpText": "Təlimçidən sinifləri təyin etmək və ya silmək üçün klikləyin",
         "currentlyAssigned": "Hazırda Təyin Edilmiş",
         "maxCapacity": "maks",
-        "weeklySchedule": "Həftəlik Cədvəl"
+        "weeklySchedule": "Həftəlik Cədvəl",
+        "clickToAssign": "Təyin Etmək üçün Klikləyin",
+        "clickToRemove": "Silmək üçün Klikləyin",
+        "completeAssignment": "Təyinatı Tamamla",
+        "days": {
+          "sun": "Baz",
+          "mon": "B.e",
+          "tue": "Ç.a",
+          "wed": "Çər",
+          "thu": "C.a",
+          "fri": "Cüm",
+          "sat": "Şən"
+        }
       },
       "deleteScheduleModal": {
         "title": "Cədvəl Slotunu Silmə Təsdiqi",
