--- a/frontend/public/locales/ru/translation.json
+++ b/frontend/public/locales/ru/translation.json
@@ -1083,7 +1083,19 @@
         "helpText": "Нажмите, чтобы назначить или удалить классы для этого инструктора",
         "currentlyAssigned": "Текущие Назначения",
         "maxCapacity": "макс",
-        "weeklySchedule": "Еженедельное Расписание"
+        "weeklySchedule": "Еженедельное Расписание",
+        "clickToAssign": "Нажмите для Назначения",
+        "clickToRemove": "Нажмите для Удаления",
+        "completeAssignment": "Завершить Назначение",
+        "days": {
+          "sun": "Вс",
+          "mon": "Пн",
+          "tue": "Вт",
+          "wed": "Ср",
+          "thu": "Чт",
+          "fri": "Пт",
+          "sat": "Сб"
+        }
       },
       "deleteScheduleModal": {
         "title": "Подтверждение Удаления Слота Расписания",
