feat(AnnouncementManager): Phase 1 - Translate Header, Stats, and Filters - Added i18next import and useTranslation hook - Translated header (Back button, title) - Translated all 6 stats cards (Total, Published, Drafts, Scheduled, Total Views, Read Rate) - Translated Create button and search placeholder - Translated Type filter (All Types, General, Class, Maintenance, Event, Promotion) - Translated Status filter (All Status, Draft, Published, Scheduled, Expired) - Translated Priority filter (All Priorities, Low, Normal, High, Urgent) - Translated empty state (title and description) - Added 47 translation keys for EN, AZ, RU - Phase 1 of 4 complete

--- a/frontend/public/locales/az/translation.json
+++ b/frontend/public/locales/az/translation.json
@@ -1125,6 +1125,52 @@
         "minutes": "dəq",
         "years": "il",
         "capacity": "{{current}}/{{max}}"
+      },
+      "announcementManager": {
+        "header": {
+          "backButton": "Qəbula Geri Dön",
+          "title": "Elan Meneceri"
+        },
+        "stats": {
+          "total": "Ümumi Elanlar",
+          "published": "Dərc Edilmiş",
+          "drafts": "Qaralamalar",
+          "scheduled": "Planlaşdırılmış",
+          "totalViews": "Ümumi Baxışlar",
+          "readRate": "Oxunma Dərəcəsi"
+        },
+        "controls": {
+          "createButton": "Elan Yarat",
+          "searchPlaceholder": "Elan axtar..."
+        },
+        "filters": {
+          "type": {
+            "all": "Bütün Növlər",
+            "general": "Ümumi",
+            "class": "Sinif",
+            "maintenance": "Təmir",
+            "event": "Tədbir",
+            "promotion": "Promosyon"
+          },
+          "status": {
+            "all": "Bütün Statuslar",
+            "draft": "Qaralama",
+            "published": "Dərc Edilmiş",
+            "scheduled": "Planlaşdırılmış",
+            "expired": "Müddəti Bitmiş"
+          },
+          "priority": {
+            "all": "Bütün Prioritetlər",
+            "low": "Aşağı",
+            "normal": "Normal",
+            "high": "Yüksək",
+            "urgent": "Təcili"
+          }
+        },
+        "emptyState": {
+          "title": "Elan Tapılmadı",
+          "description": "Başlamaq üçün ilk elanınızı yaradın!"
+        }
       }
     }
   }
