--- a/frontend/public/locales/ru/translation.json
+++ b/frontend/public/locales/ru/translation.json
@@ -1172,6 +1172,163 @@
           "description": "Создайте первое объявление, чтобы начать!"
         }
       }
+    },
+    "announcementManager": {
+      "header": {
+        "backButton": "← Назад к Ресепшн",
+        "title": "Управление Объявлениями"
+      },
+      "stats": {
+        "total": "Всего Объявлений",
+        "published": "Опубликовано",
+        "drafts": "Черновики",
+        "scheduled": "Запланировано",
+        "totalViews": "Всего Просмотров",
+        "readRate": "Процент Прочтения"
+      },
+      "controls": {
+        "createButton": "+ Создать Новое Объявление",
+        "searchPlaceholder": "Поиск объявлений..."
+      },
+      "filters": {
+        "type": {
+          "all": "Все Типы",
+          "general": "Общее",
+          "class": "Занятие",
+          "maintenance": "Обслуживание",
+          "event": "Мероприятие",
+          "promotion": "Акция"
+        },
+        "status": {
+          "all": "Все Статусы",
+          "draft": "Черновик",
+          "published": "Опубликовано",
+          "scheduled": "Запланировано",
+          "expired": "Истекло"
+        },
+        "priority": {
+          "all": "Все Приоритеты",
+          "low": "Низкий",
+          "normal": "Обычный",
+          "high": "Высокий",
+          "urgent": "Срочный"
+        }
+      },
+      "emptyState": {
+        "title": "Объявлений Пока Нет",
+        "description": "Создайте первое объявление, чтобы информировать участников!"
+      },
+      "card": {
+        "recipients": "Получатели",
+        "created": "Создано",
+        "published": "Опубликовано",
+        "scheduled": "Запланировано на",
+        "views": "просмотров",
+        "reads": "прочитано"
+      },
+      "recipientTypes": {
+        "all": "Все Участники",
+        "members": "Только Участники",
+        "instructors": "Только Инструкторы",
+        "staff": "Только Персонал",
+        "custom": "Пользовательский Список"
+      },
+      "actions": {
+        "preview": "👁️ Предпросмотр",
+        "edit": "✏️ Редактировать",
+        "publish": "📤 Опубликовать",
+        "delete": "🗑️ Удалить"
+      },
+      "modal": {
+        "createTitle": "Создать Новое Объявление",
+        "editTitle": "Редактировать Объявление",
+        "previewTitle": "Предпросмотр Объявления",
+        "close": "✕",
+        "cancel": "Отмена",
+        "save": "Сохранить",
+        "update": "Обновить Объявление",
+        "publish": "Опубликовать",
+        "fields": {
+          "title": "Заголовок",
+          "titlePlaceholder": "Введите заголовок объявления",
+          "content": "Содержание",
+          "contentPlaceholder": "Введите содержание объявления",
+          "type": "Тип",
+          "priority": "Приоритет",
+          "recipients": "Получатели",
+          "status": "Статус",
+          "scheduledDate": "Дата Публикации",
+          "scheduledPlaceholder": "Выберите дату публикации",
+          "tags": "Теги (через запятую)",
+          "tagsPlaceholder": "например: занятия, акция, обслуживание",
+          "expiryDate": "Дата Истечения (необязательно)",
+          "expiryPlaceholder": "Выберите дату истечения",
+          "datePreview": "Предпросмотр"
+        },
+        "typeOptions": {
+          "general": "Общее",
+          "class": "Занятие",
+          "maintenance": "Обслуживание",
+          "event": "Мероприятие",
+          "promotion": "Акция"
+        },
+        "priorityOptions": {
+          "low": "Низкий",
+          "normal": "Обычный",
+          "high": "Высокий",
+          "urgent": "Срочный"
+        },
+        "recipientOptions": {
+          "all": "Все Пользователи",
+          "members": "Только Участники",
+          "instructors": "Только Инструкторы",
+          "staff": "Только Персонал",
+          "custom": "Пользовательский Выбор"
+        },
+        "statusOptions": {
+          "draft": "Сохранить как Черновик",
+          "published": "Опубликовать Немедленно",
+          "scheduled": "Запланировать на Позже"
+        },
+        "previewDetails": {
+          "recipients": "Получатели",
+          "createdBy": "Создано",
+          "created": "Создано",
+          "published": "Опубликовано",
+          "expires": "Истекает"
+        }
+      },
+      "deleteModal": {
+        "title": "Подтвердите Удаление",
+        "question": "Вы уверены, что хотите удалить это объявление?",
+        "infoTitle": "Заголовок",
+        "infoType": "Тип",
+        "infoStatus": "Статус",
+        "warning": "Это действие нельзя отменить. Объявление будет удалено навсегда.",
+        "cancel": "Отмена",
+        "confirm": "Да, Удалить"
+      },
+      "badges": {
+        "priority": {
+          "low": "Низкий",
+          "normal": "Обычный",
+          "high": "Высокий",
+          "urgent": "Срочный"
+        },
+        "status": {
+          "draft": "Черновик",
+          "published": "Опубликовано",
+          "scheduled": "Запланировано",
+          "expired": "Истекло"
+        },
+        "type": {
+          "general": "Общее",
+          "class": "Занятие",
+          "maintenance": "Обслуживание",
+          "event": "Мероприятие",
+          "promotion": "Акция"
+        }
+      }
     }
   }
 }
